# nonebot-plugin-template

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
nonebot_plugin_example/: __init__.py
nonebot_plugin_template/: __init__.py
