[project]
name = "nonebot-plugin-example"
dynamic = ["version"]
description = "Template plugin project"
authors = [{ name = "student_2333", email = "lgc2333@126.com" }]
dependencies = ["nonebot2>=2.3.1", "nonebot-plugin-alconna>=0.48.0"]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/owner/nonebot-plugin-example"

[dependency-groups]
dev = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = []

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_example/__init__.py"
